--- a/CFP.App/Formularios/Cadastros/UserControlCadastroFormaPagamento.xaml
+++ b/CFP.App/Formularios/Cadastros/UserControlCadastroFormaPagamento.xaml
@@ -132,16 +132,35 @@
                     PreviewTextInput="txtDiasVencimento_PreviewTextInput" PreviewKeyDown="txtDiasVencimento_PreviewKeyDown"  
                      MaxLength="3" TabIndex="3"
                     />
-                <ComboBox 
-                    x:Name="cmbSituacao"
-                    Grid.Row="3"
-                     materialDesign:HintAssist.Hint="Situação" 
-                     Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
-                     FontFamily="Champagne &amp; Limousines" 
-                     FontSize="22" 
-                     Foreground="#FF1F3D68" 
-                    TabIndex="4">
-                </ComboBox>
+                <Grid Grid.Row="3">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="170"/>
+                    </Grid.ColumnDefinitions>
+                    <ComboBox 
+                            x:Name="cmbSituacao"
+                            Grid.Column="0"
+                            materialDesign:HintAssist.Hint="Situação" 
+                            Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
+                            FontFamily="Champagne &amp; Limousines" 
+                            FontSize="22" 
+                            Foreground="#FF1F3D68" 
+                            TabIndex="4"/>
+
+                    <TextBox
+                        x:Name="txtDiaVencimento"
+                        Grid.Column="1"
+                         materialDesign:HintAssist.Hint="Dia Vencimento"
+                         Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                         FontFamily="Champagne &amp; Limousines" 
+                         FontSize="22" 
+                         Foreground="#FF1F3D68"  
+                         VerticalAlignment="Center"
+                         MaxLength="70" Margin="10 0 0 0" IsEnabled="False">
+                    </TextBox>
+
+                </Grid >
+                
                 <CheckBox x:Name="chkTransacaoBancaria" 
                           Grid.Row="4"
                           Content="Realiza Transações Bancárias?"
@@ -157,9 +176,7 @@
                           FontFamily="Champagne &amp; Limousines" 
                                 FontSize="20"  
                                 Foreground="#FF1F3D68"
-                                Style="{StaticResource MaterialDesignFilterChipAccentCheckBox}" Margin="297,14,0,14" >
-
-                </CheckBox>
+                                Style="{StaticResource MaterialDesignFilterChipAccentCheckBox}" Margin="297,14,0,14" Click="chkUsadoParaCompras_Click" />
                 <CheckBox x:Name="chkRemoveCofre" 
                           Grid.Row="4"
                           Content="Débito Automático?"
