--- a/CFP.App/Formularios/Financeiros/CartoesCredito.xaml
+++ b/CFP.App/Formularios/Financeiros/CartoesCredito.xaml
@@ -32,15 +32,53 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
 
-            <Button x:Name="btNovoRegistro"
-                    Grid.Column="13"
+            <ComboBox 
+                    x:Name="cmbCartao"
+                    Grid.ColumnSpan="4"  Grid.Row="0"
+                    materialDesign:HintAssist.Hint="Cartão" 
+                    Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
+                    FontFamily="Champagne &amp; Limousines" 
+                    FontSize="12"
+                    Foreground="LightGray" 
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Stretch"
+                    Margin="20 0 20 0" />
+
+            <TextBlock x:Name="txtTotalFatura" 
+                       Text="Total R$ 0.00"
+                       Grid.Column="8"
+                       Grid.ColumnSpan="3"
+                       Foreground="DarkGray"
+                       FontFamily="Champagne &amp; Limousines"
+                       FontSize="18"
+                       VerticalAlignment="Center"
+                       HorizontalAlignment="Center"
+                       Margin="10"/>
+
+            <Button x:Name="btFecharFatura"
+                    Grid.Column="11"
                     Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}" 
                     Height="60" Width="60" 
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     Background="#FF1F3D68" 
                     BorderBrush="#FF1F3D68"
-                    ToolTip="Novo Registro">
+                    ToolTip="Fechar Fatura">
+                <materialDesign:PackIcon 
+                    Kind="Invoice"  
+                    Width="50" 
+                    Height="50"/>
+            </Button>
+
+            <Button x:Name="btNovoRegistro"
+                    Grid.Column="13"
+                    Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}" 
+                    Height="60" Width="60" 
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Bottom"
+                    Background="#FF1F3D68" 
+                    BorderBrush="#FF1F3D68"
+                    ToolTip="Novo Registro" Margin="1.6,0,1.6,5.4" Click="btNovoRegistro_Click">
                 <materialDesign:PackIcon 
                     Kind="Add"  
                     Width="50" 
@@ -92,9 +130,9 @@
                         <DataGridTextColumn Header="Data" Binding="{Binding DataEmissao, StringFormat=d,  ConverterCulture='pt-BR'}" />
                         <DataGridTextColumn Header="Descricão" Binding="{Binding Numero}" />
                         <DataGridTextColumn Header="Grupo" Binding="{Binding SubGrupoGasto}"/>
-                        <DataGridTextColumn Header="Parcela ($)" Binding="{Binding ValorParcela, StringFormat='#,##0.00',  ConverterCulture='pt-BR'}" />
-                     
-                       
+                        <DataGridTextColumn Header="Valor($)" Binding="{Binding ValorParcela, StringFormat='#,##0.00',  ConverterCulture='pt-BR'}" />
+
+
                     </DataGrid.Columns>
                     <!--<DataGrid.ContextMenu>
                         <ContextMenu>
