--- a/CFP.App/Formularios/Financeiros/TelasConfirmacoes/AdicionaValoresFatura.xaml
+++ b/CFP.App/Formularios/Financeiros/TelasConfirmacoes/AdicionaValoresFatura.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d"
         ResizeMode="NoResize"
         Title="ConfirmacaoPagamentoParcela" 
-        Height="300" Width="500" 
+        Height="350" Width="500" 
         WindowStartupLocation="CenterScreen"
         WindowStyle="None" Loaded="Window_Loaded" >
     <Grid>
@@ -34,6 +34,7 @@
                     BorderBrush="#FF1F3D68">
             <Grid>
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="55"/>
                     <RowDefinition Height="55"/>
                     <RowDefinition Height="55"/>
                     <RowDefinition Height="55"/>
@@ -152,6 +153,18 @@
                     Margin="10 0 20 0" TabIndex="5" />
 
                 </Grid>
+
+                <ComboBox 
+                    x:Name="cmbRefPessoa"
+                    Grid.ColumnSpan="3"  Grid.Row="4"
+                    materialDesign:HintAssist.Hint="Pessoa Referenciada" 
+                    Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
+                    FontFamily="Champagne &amp; Limousines" 
+                    FontSize="18"
+                    Foreground="#FF1F3D68" 
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Stretch"
+                    Margin="20 0 20 0"/>
             </Grid>
         </Border>
     </Grid>
