--- a/CFP.App/Formularios/Financeiros/CartoesCredito.xaml
+++ b/CFP.App/Formularios/Financeiros/CartoesCredito.xaml
@@ -10,7 +10,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="70"/>
-            <RowDefinition Height="500"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid x:Name="GridCabecalho" Grid.Row="0" Background="#FF1F3D68">
             <Grid.ColumnDefinitions>
@@ -32,21 +32,51 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
 
-            <ComboBox 
-                    x:Name="cmbCartao"
-                    Grid.ColumnSpan="4"  Grid.Row="0"
-                    materialDesign:HintAssist.Hint="Cartão" 
-                    Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
-                    FontFamily="Champagne &amp; Limousines" 
-                    FontSize="12"
-                    Foreground="LightGray" 
+            <Button x:Name="btPesquisar"
+                    Grid.Column="0"
+                    Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}" 
+                    Height="60" Width="60" 
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center" 
+                    Background="#FF1F3D68" 
+                    BorderBrush="#FF1F3D68"
+                    ToolTip="Pesquisa de Caixas" Click="btPesquisar_Click" >
+                <materialDesign:PackIcon 
+                    Kind="Search"  
+                    Width="50" 
+                    Height="50"/>
+            </Button>
+
+            <TextBox x:Name="txtFatura"
+                     Grid.Column="1" Grid.ColumnSpan="5"
+                     materialDesign:HintAssist.Hint="Fatura" 
+                     Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                     FontFamily="Champagne &amp; Limousines" 
+                     FontSize="18" 
+                     Foreground="White" 
+                     HorizontalAlignment="Stretch"
+                     VerticalAlignment="Center" 
+                     Margin="10,10" 
+                     IsReadOnly="True"/>
+
+            <Button x:Name="btLimpaPesquisa"
+                    Grid.Column="6"
+                    Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}" 
+                    Height="60" Width="60" 
+                    HorizontalAlignment="Right"
                     VerticalAlignment="Center"
-                    HorizontalAlignment="Stretch"
-                    Margin="20 0 20 0" />
+                    Background="#FF1F3D68" 
+                    BorderBrush="#FF1F3D68"
+                    ToolTip="Limpa Pesquisa" Margin="0,5,2,5" Click="btLimpaPesquisa_Click" >
+                <materialDesign:PackIcon 
+                    Kind="Broom"  
+                    Width="50" 
+                    Height="50"/>
+            </Button>
 
             <TextBlock x:Name="txtTotalFatura" 
                        Text="Total R$ 0.00"
-                       Grid.Column="8"
+                       Grid.Column="9"
                        Grid.ColumnSpan="3"
                        Foreground="DarkGray"
                        FontFamily="Champagne &amp; Limousines"
@@ -55,15 +85,15 @@
                        HorizontalAlignment="Center"
                        Margin="10"/>
 
-            <Button x:Name="btFecharFatura"
-                    Grid.Column="11"
+            <Button x:Name="btAbrirFecharFatura"
+                    Grid.Column="12"
                     Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}" 
                     Height="60" Width="60" 
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     Background="#FF1F3D68" 
                     BorderBrush="#FF1F3D68"
-                    ToolTip="Fechar Fatura">
+                    ToolTip="Abrir ou Fechar Fatura" Click="btAbrirFecharFatura_Click">
                 <materialDesign:PackIcon 
                     Kind="Invoice"  
                     Width="50" 
@@ -113,19 +143,25 @@
                     Height="50"/>
             </Button>
         </Grid>
-        <Grid x:Name="GridCampos" Background="LightGray" Margin="0,70,0,62" Grid.RowSpan="2" >
+        <Grid x:Name="GridCampos" Background="LightGray" Grid.Row="1" >
             <TextBlock x:Name="lblNomeTela" Text="Cartões de Crédito" 
                        HorizontalAlignment="Left" 
                        VerticalAlignment="Top" 
                        FontSize="15"
                       Foreground="#FF1F3D68"
                        Margin="5,5,0,0"/>
+            <TextBlock x:Name="lblSituacao" Text="Fechada" 
+                       HorizontalAlignment="Right" 
+                       VerticalAlignment="Top" 
+                       FontSize="15"
+                      Foreground="#FF1F3D68"
+                       Margin="5,0, 5, 5"/>
             <Grid x:Name="gridFaturaCartoes" Grid.Row="1" Margin="50">
-                <DataGrid x:Name="DataGridContaPagamento"  
+                <DataGrid x:Name="dgCartaoCredito"  
                                           AutoGenerateColumns="False" 
                                           VerticalScrollBarVisibility="Auto" 
                                           IsReadOnly="True"
-                                          TabIndex="6">
+                                          TabIndex="6" Margin="0,0,0,0">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Data" Binding="{Binding DataEmissao, StringFormat=d,  ConverterCulture='pt-BR'}" />
                         <DataGridTextColumn Header="Descricão" Binding="{Binding Numero}" />
