Tela cartao de credito e adicao de valores para fatura concluido e testado

--- a/CFP.App/Formularios/Financeiros/TelasConfirmacoes/AdicionaValoresFatura.xaml
+++ b/CFP.App/Formularios/Financeiros/TelasConfirmacoes/AdicionaValoresFatura.xaml
@@ -64,7 +64,7 @@
                     Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}" 
                     Height="Auto" Width="50" 
                     Background="#FF1F3D68" 
-                    HorizontalAlignment="Center" BorderBrush="#FF1F3D68" TabIndex="6" Click="btConfirmar_Click" Margin="7.6,3,7.2,2.2" >
+                    HorizontalAlignment="Center" BorderBrush="#FF1F3D68" TabIndex="7" Click="btConfirmar_Click" Margin="7.6,3,7.2,2.2" >
                     <materialDesign:PackIcon 
                     Kind="Check"  
                     Width="50" 
@@ -76,7 +76,7 @@
                     Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}" 
                     Height="50" Width="50" 
                     Background="#FF1F3D68" 
-                    HorizontalAlignment="Center" BorderBrush="#FF1F3D68" Click="btCancelar_Click" TabIndex="7" >
+                    HorizontalAlignment="Center" BorderBrush="#FF1F3D68" Click="btCancelar_Click" TabIndex="8" >
                     <materialDesign:PackIcon 
                     Kind="ExitToApp"  
                     Width="50" 
@@ -105,18 +105,18 @@
                     Foreground="#FF1F3D68" 
                     VerticalAlignment="Center"
                     HorizontalAlignment="Stretch"
-                    Margin="20 0 20 0" TabIndex="2" />
+                    Margin="20 0 20 0" TabIndex="0" />
 
                 <Grid Grid.ColumnSpan="3" Grid.Row="2">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="160"/>
                         <ColumnDefinition Width="70"/>
-                        <ColumnDefinition Width="70"/>
+                        <ColumnDefinition Width="160"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <ComboBox 
                     x:Name="cmbTipoCalculo"
-                        Grid.Column="2"
+                        Grid.Column="3"
                         materialDesign:HintAssist.Hint="Calc" 
                         Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
                         FontFamily="Champagne &amp; Limousines" 
@@ -124,7 +124,7 @@
                         Foreground="#FF1F3D68" 
                         VerticalAlignment="Center"
                         HorizontalAlignment="Stretch"
-                        Margin="10 0 0 0" TabIndex="2" >
+                        Margin="0 0 20 0" TabIndex="4" >
                         <ListBoxItem Content="DIV" ContentStringFormat=""/>
                         <ListBoxItem Content="REP"/>
                     </ComboBox>
@@ -139,7 +139,7 @@
                             Foreground="#FF1F3D68"
                             VerticalAlignment="Center" 
                             HorizontalAlignment="Stretch"
-                            Margin="20 0 10 0" TabIndex="3" PreviewKeyDown="txtValor_PreviewKeyDown" PreviewTextInput="txtValor_PreviewTextInput" TextChanged="txtValor_TextChanged" />
+                            Margin="20 0 10 0" TabIndex="2" PreviewKeyDown="txtValor_PreviewKeyDown" PreviewTextInput="txtValor_PreviewTextInput" TextChanged="txtValor_TextChanged" />
 
                     <TextBox
                             x:Name="txtQtd"
@@ -152,13 +152,13 @@
                             VerticalAlignment="Center" 
                             HorizontalAlignment="Stretch"
                             Margin="0 0 10 0" 
-                            Text="1" TabIndex="4" 
+                            Text="1" TabIndex="3" 
                             MaxLength="3"
                             PreviewKeyDown="txtQtd_PreviewKeyDown" PreviewTextInput="txtQtd_PreviewTextInput" TextChanged="txtQtd_TextChanged" LostFocus="txtQtd_LostFocus"/>
 
                     <DatePicker
                                 x:Name="txtData"
-                                Grid.Column="3"
+                                Grid.Column="2"
                                 materialDesign:HintAssist.Hint="Data da Compra" 
                                 Style="{StaticResource MaterialDesignFloatingHintDatePicker}" 
                                 FontFamily="Champagne &amp; Limousines" 
@@ -166,7 +166,7 @@
                                 Foreground="#FF1F3D68"
                                 VerticalAlignment="Center"
                                 HorizontalAlignment="Stretch"
-                    Margin="10 0 20 0" TabIndex="5" />
+                    Margin="0 0 10 0" TabIndex="5" />
 
                 </Grid>
 
@@ -180,7 +180,7 @@
                     Foreground="#FF1F3D68" 
                     VerticalAlignment="Center"
                     HorizontalAlignment="Stretch"
-                    Margin="20 0 20 0"/>
+                    Margin="20 0 20 0" TabIndex="6" KeyDown="cmbRefPessoa_KeyDown"/>
             </Grid>
         </Border>
     </Grid>
