--- a/CFP.App/Formularios/Pesquisas/PesquisaCartoesCredito.xaml
+++ b/CFP.App/Formularios/Pesquisas/PesquisaCartoesCredito.xaml
@@ -19,6 +19,7 @@
                   >
             <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding DescricaoCompleta}" Header="Descrição"/>
+                <DataGridTextColumn Header="Valor Fatura($)" Binding="{Binding ValorFatura, StringFormat='#,##0.00',  ConverterCulture='pt-BR'}" />
                 <DataGridTextColumn Binding="{Binding SituacaoFatura}" Header="Situação"/>
             </DataGrid.Columns>
         </DataGrid>
