--- a/CFP.App/Formularios/Financeiros/UserControlCaixa.xaml
+++ b/CFP.App/Formularios/Financeiros/UserControlCaixa.xaml
@@ -322,26 +322,49 @@
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="40"/>
                         </Grid.RowDefinitions>
-                        <DataGrid x:Name="DataGridAReceber" Grid.Row="0" 
+                        <TabControl x:Name="tabPessoasRef" Margin="0,0,0,0">
+                            <TabItem x:Name="tabItemContas" Header="Contas" Height="22" VerticalAlignment="Top" >
+                                <DataGrid x:Name="DataGridAReceber" Grid.Row="0" 
                                   AutoGenerateColumns="False" 
                                   IsReadOnly="True" MouseUp="DataGridAReceber_MouseUp" KeyDown="DataGridAReceber_KeyDown" >
-                            <DataGrid.Columns>
-                                <DataGridTextColumn Header="Tipo" Binding="{Binding Conta.TipoConta}" />
-                                <DataGridTextColumn Header="Valor" Binding="{Binding ValorReajustado, StringFormat='#,##0.00',  ConverterCulture='pt-BR'}" />
-                                <DataGridTextColumn Header="Pessoa" Binding="{Binding Conta.Pessoa}" />
-                                <DataGridTextColumn Header="Data" Binding="{Binding DataVencimento, StringFormat=d,  ConverterCulture='pt-BR'}" />
-                                <DataGridTextColumn Header="Conta" Binding="{Binding Conta.Nome}" />
-                            </DataGrid.Columns>
-                            <DataGrid.ContextMenu>
-                                <ContextMenu>
-                                    <MenuItem x:Name="MenuItemAddTudoCaixa" Header="Adicionar todos ao caixa" Click="MenuItemAddTudoCaixa_Click"/>
-                                    <MenuItem x:Name="MenuItemAddItemSelecionado" Header="Adicionar items selecionados ao caixa" Click="MenuItemAddItemSelecionado_Click"/>
-                                    <MenuItem x:Name="MenuItemAddTudoCofre" Header="Adicionar todos ao cofre" Click="MenuItemAddTudoCofre_Click"/>
-                                    <MenuItem x:Name="MenuItemAddItemSelecionadoCofre" Header="Adicionar items selecionados ao cofre" Click="MenuItemAddItemSelecionadoCofre_Click" />
-                                </ContextMenu>
-                            </DataGrid.ContextMenu>
-                        </DataGrid>
-
+                                    <DataGrid.Columns>
+                                        <DataGridTextColumn Header="Tipo" Binding="{Binding Conta.TipoConta}" />
+                                        <DataGridTextColumn Header="Valor" Binding="{Binding ValorReajustado, StringFormat='#,##0.00',  ConverterCulture='pt-BR'}" />
+                                        <DataGridTextColumn Header="Pessoa" Binding="{Binding Conta.Pessoa}" />
+                                        <DataGridTextColumn Header="Data" Binding="{Binding DataVencimento, StringFormat=d,  ConverterCulture='pt-BR'}" />
+                                        <DataGridTextColumn Header="Conta" Binding="{Binding Conta.Nome}" />
+                                    </DataGrid.Columns>
+                                    <DataGrid.ContextMenu>
+                                        <ContextMenu>
+                                            <MenuItem x:Name="MenuItemAddTudoCaixa" Header="Adicionar todos ao caixa" Click="MenuItemAddTudoCaixa_Click"/>
+                                            <MenuItem x:Name="MenuItemAddItemSelecionado" Header="Adicionar items selecionados ao caixa" Click="MenuItemAddItemSelecionado_Click"/>
+                                            <MenuItem x:Name="MenuItemAddTudoCofre" Header="Adicionar todos ao cofre" Click="MenuItemAddTudoCofre_Click"/>
+                                            <MenuItem x:Name="MenuItemAddItemSelecionadoCofre" Header="Adicionar items selecionados ao cofre" Click="MenuItemAddItemSelecionadoCofre_Click" />
+                                        </ContextMenu>
+                                    </DataGrid.ContextMenu>
+                                </DataGrid>
+                            </TabItem>
+                            <TabItem x:Name="tabItemCartoes" Header="Cartões" >
+                                <DataGrid x:Name="dgReceberPessoaRefCartao" Grid.Row="0" 
+                                  AutoGenerateColumns="False" 
+                                  IsReadOnly="True" KeyDown="dgReceberPessoaRefCartao_KeyDown" MouseUp="dgReceberPessoaRefCartao_MouseUp" >
+                                    <DataGrid.Columns>
+                                        <DataGridTextColumn Header="Cartão" Binding="{Binding CartaoCredito.DescricaoCompleta}" />
+                                        <DataGridTextColumn Header="Valor" Binding="{Binding Valor, StringFormat='#,##0.00',  ConverterCulture='pt-BR'}" />
+                                        <DataGridTextColumn Header="Pessoa" Binding="{Binding Pessoa}" />
+                                        <DataGridTextColumn Header="Data Compra" Binding="{Binding DataCompra, StringFormat=d,  ConverterCulture='pt-BR'}" />
+                                    </DataGrid.Columns>
+                                    <DataGrid.ContextMenu>
+                                        <ContextMenu>
+                                            <MenuItem x:Name="miAddTudoCaixa" Header="Adicionar todos ao caixa" />
+                                            <MenuItem x:Name="miAddItemSelecionado" Header="Adicionar items selecionados ao caixa" />
+                                            <MenuItem x:Name="miAddTudoCofre" Header="Adicionar todos ao cofre" />
+                                            <MenuItem x:Name="miAddItemSelecionadoCofre" Header="Adicionar items selecionados ao cofre" />
+                                        </ContextMenu>
+                                    </DataGrid.ContextMenu>
+                                </DataGrid>
+                            </TabItem>
+                        </TabControl>
                         <Grid Grid.Row="1">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition/>
@@ -367,8 +390,6 @@
                                        HorizontalAlignment="Left"
                                        Margin="10"/>
                         </Grid>
-                        
-                        
                     </Grid>
                 </TabItem>
             </TabControl>
