Adicionar tudo e item selecionado ao caixa referente as pessoas referenciadas no cartao de crédito concluido e testado

--- a/CFP.App/Formularios/Financeiros/UserControlCaixa.xaml
+++ b/CFP.App/Formularios/Financeiros/UserControlCaixa.xaml
@@ -358,8 +358,8 @@
                                     <DataGrid.ContextMenu>
                                         <ContextMenu>
                                             <MenuItem x:Name="miAddTudoCaixaCartoes" Header="Adicionar todos ao caixa" Click="miAddTudoCaixaCartoes_Click" />
-                                            <MenuItem x:Name="miAddItemSelecionadoCartoes" Header="Adicionar items selecionados ao caixa" />
-                                            <MenuItem x:Name="miAddTudoCofreCartoes" Header="Adicionar todos ao cofre" />
+                                            <MenuItem x:Name="miAddItemSelecionadoCartoes" Header="Adicionar items selecionados ao caixa" Click="miAddItemSelecionadoCartoes_Click" />
+                                            <MenuItem x:Name="miAddTudoCofreCartoes" Header="Adicionar todos ao cofre" Click="miAddTudoCofreCartoes_Click" />
                                             <MenuItem x:Name="miAddItemSelecionadoCofreCartoes" Header="Adicionar items selecionados ao cofre" />
                                         </ContextMenu>
                                     </DataGrid.ContextMenu>
